fixed blurry text

--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -1273,7 +1273,6 @@ img {
               transform: translate(-50%, -50%); }
     .header-wrapper .hero-image .intro {
       padding-bottom: 15px;
-      margin-bottom: 25px;
       text-align: right;
       font-size: 28px;
       line-height: 31px;
