--- a/sass/2-sections/_header.sass
+++ b/sass/2-sections/_header.sass
@@ -26,7 +26,6 @@
       transform: translate(-50%, -50%)
     .intro
       padding-bottom: 15px
-      margin-bottom: 25px
       text-align: right
       font-size: 28px
       line-height: 31px
